# Fraud_OneOne

./: .env.example  .env.prod.example  .gitignore  DEVELOPMENT.md  Dockerfile  Jenkinsfile  LICENSES.md  Makefile  README.md  README_ARCHITECTURE.md  docker-compose.dev.yml  docker-compose.observability.dev.yml  docker-compose.observability.yml  docker-compose.onnx.yml  docker-compose.prod.yml  fraud_autoencoder.pth  fraud_detection_advanced_model.pkl  license_policy.json  lstm_fraud_detector.pth  model_metadata1.pkl  model_performance.json  node2vec_model.pkl  optimized_fraud_detection_system.pkl  requirements.in  requirements.lock.txt  scaler.pkl  sequential_scaler.pkl  temp_model_script.py  test_redis.py  third_party_licenses.json
backend/: Dockerfile  __init__.py  logging_config.py  pyproject.toml  requirements.txt
backend/api/: config.py  dependencies.py  main.py  schemas.py
backend/database/: __init__.py  mongo.py  mongo_batch.py  redis_batch.py  redis_client.py
backend/middleware/: load_shed.py  security.py
backend/ml_models/: __init__.py  ensemble.py
backend/monitoring/: __init__.py  drift.py  metrics.py
backend/security/: __init__.py  crypto_utils.py  gpg_utils.py  hmac_utils.py  jwt_utils.py  model_integrity.py  rbac.py
backend/streaming/: __init__.py  kafka_consumer_batch.py  kafka_producer.py
backend/tests/: test_auth_security.py  test_crypto_integrity.py  test_drift.py  test_health.py  test_jti_replay_protection.py  test_load_shedding_trigger.py  test_safe_mode_tls_failure.py  test_tls_config.py
backend/tls/: config.json  server.crt
(+110 files in other folders)
